# AEGIS

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  ollama.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
